<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_contacts"
            android:title="@string/nav_item_friends"></item>
        <item
            android:icon="@mipmap/ic_bell"
            android:title="@string/nav_item_message"></item>
        <item
            android:icon="@mipmap/gear"
            android:title="@string/nav_item_setting"></item>
    </group>

    <item
        android:title="@string/nav_item_communicate">
        <menu>
            <item
                android:icon="@mipmap/ic_share"
                android:title="@string/nav_item_share"></item>
        </menu>
    </item>
</menu>